--- a/privacy.html
+++ b/privacy.html
@@ -1,7 +1,27 @@
 Privacy Policy for FocusHub
-Last updated: December 20, 2025
+Last updated: January 7th, 2026
 
 This Privacy Policy describes Our policies and procedures on the collection, use, and disclosure of Your information when You use FocusHub and tells You about Your privacy rights and how the law protects You.
+1. Data Storage Philosophy
+FocusHub is designed as a local-first productivity tool. We believe your data belongs to you. To ensure maximum privacy and offline accessibility:
+On-Device Storage: All tasks, notes, focus points, and productivity stats are stored exclusively in your device's browser localStorage.
+No Central Servers: FocusHub does not maintain databases or cloud servers that store your personal content. We cannot see, access, or sell your task lists.
+
+2. Data Portability and Exports
+We provide tools to help you move and secure your data at your discretion:
+Manual Backups: You can generate a full application backup in .json format. This process gathers your local data and prepares it for export.
+CSV Export: You can convert your current task views into a CSVF document for physical printing or digital archiving.
+Sharing: When using the "Share" feature, your data is temporarily handed to the Android system to be sent via your chosen third-party app (e.g., Google Drive, Email). Once shared, the data is subject to that third party’s privacy policy.
+
+3. Data Retention and Deletion
+User-Controlled Deletion: You may permanently delete all application data by using the "Clear All Data" function in the Settings menu. This action is irreversible.
+Browser Cleansing: Be aware that clearing your browser cache or "Site Data" on your Android device may result in the loss of your FocusHub data if you have not created a manual backup.
+
+4. Security
+Since your data never leaves your device (unless you explicitly share it), the security of your information depends on the security of your physical device. We recommend using device-level encryption and passcodes to protect your local storage.
+
+5. Policy Updates
+As we add new features—such as the "Export to PDF" or "Share" capabilities—this policy will be updated to reflect how those features interact with your data. You can always view the latest version via the link in our Utilities menu.
 
 Data Privacy Summary
 Personal Information: FocusHub does not collect, store, or transmit any personally identifiable information (such as name, email address, or phone number).
